Finished combatant object and rough MUSH interface.

--- a/README
+++ b/README
@@ -1,1 +1,8 @@
 Robot Fist is a robotey/scifi-oriented combat system written for PennMUSH games, but implemented in python. It is something of an experiment because I am tired of debugging MUSHcode, which is sort of which is kind of like a mash up between LISP, PERL, spaghetti, and angry bees. 
+
+# TODO
+* some level of security (no spoofing the bot)
+* access restriction by module (move all 'admin' commands into an easily restricted module)
+** use a @decorator, probably
+* attacks
+* simple effects/stats flags
